tenzir/bats/data/reference/every/test_every_errors/step_02.ref
error: expected a positive duration, got 0ns
 --> <input>:1:7
  |
1 | every 0s { version }
  |       ^^ 
  |